tests/NormalTests/paczka1/small_fuzzy/60529477.err
Error in line 1: CBC3XEUrUc S37 79,0
Error in line 2: crHOy S208 80,9
